[gd_scene load_steps=2 format=3 uid="uid://cqmg4p3vks1vd"]

[ext_resource type="Script" path="res://PlanetInfoPopup.gd" id="1_1ymzq"]

[node name="PlanetInfoPopup" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 320.0
offset_bottom = 220.0
script = ExtResource("1_1ymzq")

[node name="Shadow" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = 3.0
offset_bottom = 3.0
color = Color(0, 0, 0, 0.3)

[node name="Border" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.8, 0.8, 0.9, 1)

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
color = Color(0.15, 0.2, 0.35, 0.95)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -12.0

[node name="Header" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "ÌñâÏÑ± Ï†ïÎ≥¥"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="VBoxContainer/Header"]
layout_mode = 2
custom_minimum_size = Vector2(32, 32)
text = "‚úï"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
color = Color(0.6, 0.7, 0.8, 1)

[node name="Content" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlanetNameContainer" type="HBoxContainer" parent="VBoxContainer/Content"]
layout_mode = 2

[node name="PlanetNameIcon" type="Label" parent="VBoxContainer/Content/PlanetNameContainer"]
layout_mode = 2
custom_minimum_size = Vector2(30, 0)
text = "ü™ê"
horizontal_alignment = 1

[node name="PlanetName" type="Label" parent="VBoxContainer/Content/PlanetNameContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "ÌñâÏÑ±: [Ïù¥Î¶Ñ]"

[node name="VSeparator1" type="Control" parent="VBoxContainer/Content"]
layout_mode = 2
custom_minimum_size = Vector2(0, 8)

[node name="RadiusContainer" type="HBoxContainer" parent="VBoxContainer/Content"]
layout_mode = 2

[node name="RadiusIcon" type="Label" parent="VBoxContainer/Content/RadiusContainer"]
layout_mode = 2
custom_minimum_size = Vector2(30, 0)
text = "üìè"
horizontal_alignment = 1

[node name="PlanetRadius" type="Label" parent="VBoxContainer/Content/RadiusContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Î∞òÏßÄÎ¶Ñ: [Í∞í]"

[node name="VSeparator2" type="Control" parent="VBoxContainer/Content"]
layout_mode = 2
custom_minimum_size = Vector2(0, 8)

[node name="ResourceContainer" type="HBoxContainer" parent="VBoxContainer/Content"]
layout_mode = 2

[node name="ResourceIcon" type="Label" parent="VBoxContainer/Content/ResourceContainer"]
layout_mode = 2
custom_minimum_size = Vector2(30, 0)
text = "üíé"
horizontal_alignment = 1

[node name="ResourceCount" type="Label" parent="VBoxContainer/Content/ResourceContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Î≥¥Ïú† ÏûêÏõê: [Í∞úÏàò]Í∞ú"

[node name="VSeparator3" type="Control" parent="VBoxContainer/Content"]
layout_mode = 2
custom_minimum_size = Vector2(0, 12)

[node name="InfoContainer" type="HBoxContainer" parent="VBoxContainer/Content"]
layout_mode = 2

[node name="InfoIcon" type="Label" parent="VBoxContainer/Content/InfoContainer"]
layout_mode = 2
custom_minimum_size = Vector2(30, 0)
text = "‚ÑπÔ∏è"
horizontal_alignment = 1

[node name="InfoLabel" type="Label" parent="VBoxContainer/Content/InfoContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "ÎìúÎûòÍ∑∏ÌïòÏó¨ Ïù¥Îèô Í∞ÄÎä•"
modulate = Color(0.8, 0.9, 1, 0.8)